--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -29,6 +33,7 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
